--- a/BulkyBook/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/BulkyBook/Areas/Admin/Views/Product/Upsert.cshtml
@@ -145,4 +145,20 @@
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
+    <script src="https://cdn.tiny.cloud/1/cf74uha5nkcykzn2z2gnk3swzkqw7ftyyks1820yvzv8yica/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
+    <script>
+        tinymce.init({
+            selector: 'textarea',
+            plugins: 'list',
+            menubar: 'file edit format'
+        });
+
+        function validateInput() {
+            if (document.getElementById('uploadBox').value == "") {
+                swal("Error", "Please select an image", "error");
+                return false;
+            }
+            return true;
+        }
+    </script>
 }
