--- a/BulkyBook/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/BulkyBook/Areas/Admin/Views/Product/Upsert.cshtml
@@ -104,7 +104,7 @@
             </div>
             <div class="form-group row">
                 <div class="col-4">
-                    Category
+                    Cover Type
                 </div>
                 <div class="col-8">
                     @Html.DropDownListFor(m => m.Product.CoverTypeId, Model.CoverTypeList, "- Select a cover type", new { @class = "form-control" })
@@ -140,6 +140,12 @@
                 </div>
             </div>
         </div>
+        @if (Model.Product.Id!=0)
+        {
+            <div class="col-3 offset-1 p-4">
+                <img src="@Model.Product.ImageUrl" width="150" style="border-radius:5px; border:1px solid #bbb9b9" />
+            </div> 
+        }
     </div>
 </form>
 
