--- a/BulkyBook/Areas/Identity/Pages/Account/Register.cshtml
+++ b/BulkyBook/Areas/Identity/Pages/Account/Register.cshtml
@@ -38,6 +38,11 @@
                 <span asp-validation-for="Input.State" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Input.Email"></label>
+                <input asp-for="Input.Email" class="form-control" />
+                <span asp-validation-for="Input.Email" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Input.PostalCode"></label>
                 <input asp-for="Input.PostalCode" class="form-control" />
                 <span asp-validation-for="Input.PostalCode" class="text-danger"></span>
