Process payments for Authorized company

--- a/BulkyBook/Areas/Customer/Views/Cart/Summary.cshtml
+++ b/BulkyBook/Areas/Customer/Views/Cart/Summary.cshtml
@@ -1,5 +1,5 @@
 ﻿@model BulkyBook.Models.ViewModels.ShoppingCartVM
-@using Microsoft.Extensions.Options 
+@using Microsoft.Extensions.Options
 
 @inject IOptions<BulkyBook.Utility.StripeSettings> Stripe
 <form method="post">
@@ -79,7 +79,7 @@
                                     <span class="text-info">Order Summary:</span>
                                 </h4>
                                 <ul class="list-group mb-3">
-                                    
+
                                     @foreach (var details in Model.ListCart)
                                     {
 
@@ -90,7 +90,7 @@
                                             </div>
                                             <span class="text-muted">@((details.Count * details.Price).ToString("c"))</span>
                                         </li>
-                                        
+
                                     }
                                     <li class="list-group-item d-flex justify-content-between bg-light">
                                         <small class="text-info">Total: </small>
@@ -107,24 +107,32 @@
                             <p style="color:maroon; font-size:14px;">Estimate Arrival Date: @DateTime.Now.AddDays(7).ToShortDateString() - @DateTime.Now.AddDays(14).ToShortDateString()</p>
                         </div>
                         <div class="col-12 col-md-4">
-                            @{ 
+                            @{
                                 var OrderTotalForStripe = Model.OrderHeader.OrderTotal * 100;
                             }
-                            
-                            <script src="https://checkout.stripe.com/checkout.js" class="stripe-button" 
-                                    data-key="@Stripe.Value.PublishableKey" 
-                                    data-amount="@OrderTotalForStripe"
-                                    data-name="Bulky Book"
-                                    data-label="Place Order"
-                                    data-description="Get books for less"
-                                    data-locale="auto"
-                                    data-allow-remember-me="false",
-                                    data-image="https://stripe.com/img/documentation/checkout/marketplace.png"></script>
-                            <script>
-                                document.getElementsByClassName("stripe-button-el")[0].style.display = "none";
-                            </script>
-                            
-                            <button type="submit" value="Place Order" class="btn btn-success form-control">Place Order</button>
+                            @if (Model.OrderHeader.ApplicationUser.Company == null ||
+                            !Model.OrderHeader.ApplicationUser.Company.IsAuthorizedCompany)
+                            {
+
+                                <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+                                        data-key="@Stripe.Value.PublishableKey"
+                                        data-amount="@OrderTotalForStripe"
+                                        data-name="Bulky Book"
+                                        data-label="Place Order"
+                                        data-description="Get books for less"
+                                        data-locale="auto"
+                                        data-allow-remember-me="false" ,
+                                        data-image="https://stripe.com/img/documentation/checkout/marketplace.png"></script>
+                                <script>
+                                    document.getElementsByClassName("stripe-button-el")[0].style.display = "none";
+                                </script>
+
+                                <button type="submit" value="Place Order" class="btn btn-success form-control">Place Order</button>
+                            }
+                            else
+                            {
+                                <button type="submit" value="Place Order" class="btn btn-primary form-control">Place Order</button>
+                            }
                         </div>
                     </div>
                 </div>
