Validations for summary

--- a/BulkyBook/Areas/Customer/Views/Cart/Summary.cshtml
+++ b/BulkyBook/Areas/Customer/Views/Cart/Summary.cshtml
@@ -31,6 +31,7 @@
                                     </div>
                                     <div class="col-9">
                                         <input asp-for="OrderHeader.Name" type="text" class="form-control" />
+                                        <span asp-validation-for="OrderHeader.Name" class="text-danger" />
                                     </div>
                                 </div>
                                 <div class="row my-1">
@@ -39,6 +40,7 @@
                                     </div>
                                     <div class="col-9">
                                         <input asp-for="OrderHeader.PhoneNumber" type="text" class="form-control" />
+                                        <span asp-validation-for="OrderHeader.PhoneNumber" class="text-danger" />
                                     </div>
                                 </div>
                                 <div class="row my-1">
@@ -47,6 +49,7 @@
                                     </div>
                                     <div class="col-9">
                                         <input asp-for="OrderHeader.StreetAddress" type="text" class="form-control" />
+                                        <span asp-validation-for="OrderHeader.StreetAddress" class="text-danger" />
                                     </div>
                                 </div>
                                 <div class="row my-1">
@@ -55,6 +58,7 @@
                                     </div>
                                     <div class="col-9">
                                         <input asp-for="OrderHeader.City" type="text" class="form-control" />
+                                        <span asp-validation-for="OrderHeader.City" class="text-danger" />
                                     </div>
                                 </div>
                                 <div class="row my-1">
@@ -63,6 +67,7 @@
                                     </div>
                                     <div class="col-9">
                                         <input asp-for="OrderHeader.State" type="text" class="form-control" />
+                                        <span asp-validation-for="OrderHeader.State" class="text-danger" />
                                     </div>
                                 </div>
                                 <div class="row my-1">
@@ -71,6 +76,7 @@
                                     </div>
                                     <div class="col-9">
                                         <input asp-for="OrderHeader.PostalCode" type="text" class="form-control" />
+                                        <span asp-validation-for="OrderHeader.PostalCode" class="text-danger" />
                                     </div>
                                 </div>
                             </div>
@@ -111,7 +117,7 @@
                                 var OrderTotalForStripe = Model.OrderHeader.OrderTotal * 100;
                             }
                             @if (Model.OrderHeader.ApplicationUser.Company == null ||
-                            !Model.OrderHeader.ApplicationUser.Company.IsAuthorizedCompany)
+                           !Model.OrderHeader.ApplicationUser.Company.IsAuthorizedCompany)
                             {
 
                                 <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
@@ -140,3 +146,7 @@
         </div>
     </div>
 </form>
+
+@section scripts {
+    <partial name="_ValidationScriptsPartial" />
+}
