Order Javascript API call

--- a/BulkyBook/Areas/Admin/Views/Order/Index.cshtml
+++ b/BulkyBook/Areas/Admin/Views/Order/Index.cshtml
@@ -48,7 +48,7 @@
                 <a style="text-decoration:none;" asp-controller="Order"
                    asp-action="Index" asp-route-status="pending">
                     <li class="list-group-item @pending">
-                        Pending
+                        Payment Pending
                     </li>
                 </a>
                 <a style="text-decoration:none;" asp-controller="Order"
