--- a/BulkyBook/Areas/Admin/Views/Order/Details.cshtml
+++ b/BulkyBook/Areas/Admin/Views/Order/Details.cshtml
@@ -125,7 +125,7 @@
                                 <div class="col-9">
                                     @if (User.IsInRole(SD.Role_Employee) || User.IsInRole(SD.Role_Admin))
                                     {
-                                        <input asp-for="OrderHeader.Carrier" type="text" class="form-control" />
+                                        <input asp-for="OrderHeader.Carrier" id="carrier"  type="text" class="form-control" />
                                     }
                                     else
                                     {
@@ -138,7 +138,7 @@
                                 <div class="col-9">
                                     @if (User.IsInRole(SD.Role_Employee) || User.IsInRole(SD.Role_Admin))
                                     {
-                                        <input asp-for="OrderHeader.TrackingNumber" type="text" class="form-control" />
+                                        <input asp-for="OrderHeader.TrackingNumber" id="trackingNumber" type="text" class="form-control" />
                                     }
                                     else
                                     {
@@ -172,7 +172,7 @@
                                     {
                                         <div class="col-3">Payment Date</div>
                                         <div class="col-9">
-                                            <input value="@Model.OrderHeader.PaymentDate.ToShortDateString()" readonly type="text" class="form-control" />
+                                            <input value="@Model.OrderHeader.PaymentDate.ToShortDateString()" id="paymentDate" readonly type="text" class="form-control" />
                                         </div>
                                     }
                                 </div>
@@ -196,7 +196,7 @@
                                             <div class="col-8">
                                                 <input type="hidden" asp-for="@details.Id" />
                                                 <h6 class="my-0 text-primary">@details.Product.Title</h6>
-                                                <small class="text-muted">Price : @details.Price</small><br/>
+                                                <small class="text-muted">Price : @details.Price</small><br />
                                                 <small class="text-muted">Quantity : @details.Count</small>
                                             </div>
                                             <div class="col-4">
@@ -229,10 +229,9 @@
                                 }
                                 @if (Model.OrderHeader.OrderStatus == SD.StatusInProcess)
                                 {
-                                    <input type="submit" value="Ship Order" onclick="validateInput()" 
-                                           class="btn btn-primary  form-control" 
-                                           formaction="/Admin/Order/ShipOrder" formmethod="post"
-                                           />
+                                    <input type="submit" value="Ship Order" onclick="return validateInput()"
+                                           class="btn btn-primary  form-control"
+                                           formaction="/Admin/Order/ShipOrder" formmethod="post" />
 
                                 }
                             }
@@ -240,6 +239,19 @@
                             {
                                 <label class="btn btn-primary form-control">@Model.OrderHeader.OrderStatus</label>
                             }
+
+                            @if (Model.OrderHeader.OrderStatus != SD.StatusRefunded &&
+                           Model.OrderHeader.OrderStatus != SD.StatusCancelled &&
+                           (User.IsInRole(SD.Role_Admin) || User.IsInRole(SD.Role_Employee)))
+                            {
+                                <div class="pt-2">
+                                    <a asp-action="CancelOrder" asp-route-id="@Model.OrderHeader.Id"
+                                       class="btn btn-danger form-control ">
+                                        Cancel Order
+                                    </a>
+                                </div>
+                            }
+
                         </div>
                     </div>
                 </div>
@@ -247,3 +259,31 @@
         </div>
     </div>
 </form>
+
+@section Scripts {
+<script>
+    function validateInput() {
+        var tracking = document.getElementById("trackingNumber").value;
+        var carrier = document.getElementById("carrier").value;
+        if (tracking.toString() == '') {
+            swal("Error", "Please enter tracking number", "error");
+            return false;
+        } else {
+            if (carrier.toString() == '') {
+                swal("Error", "Please enter carrier", "error");
+                return false;
+            } else {
+                return true;
+            }
+        }
+    }
+
+    $(document).ready(function () {
+        var shippingDate = document.getElementById("shippingDate");
+        if (shippingDate.value == "1/1/0001") shippingDate.value = "";
+        var paymentDate = document.getElementById("paymentDate");
+        if (paymentDate.value == "1/1/0001") paymentDate.value = "";
+    })
+
+</script>
+} 
