--- a/BulkyBook/Areas/Admin/Views/Order/Details.cshtml
+++ b/BulkyBook/Areas/Admin/Views/Order/Details.cshtml
@@ -1,5 +1,8 @@
 ﻿@model BulkyBook.Models.ViewModels.OrderDetailsVM
 @using BulkyBook.Utility
+@using Microsoft.Extensions.Options
+
+@inject IOptions<BulkyBook.Utility.StripeSettings> Stripe
 
 <form method="post">
     <input type="hidden" asp-for="OrderHeader.Id" />
@@ -125,7 +128,7 @@
                                 <div class="col-9">
                                     @if (User.IsInRole(SD.Role_Employee) || User.IsInRole(SD.Role_Admin))
                                     {
-                                        <input asp-for="OrderHeader.Carrier" id="carrier"  type="text" class="form-control" />
+                                        <input asp-for="OrderHeader.Carrier" id="carrier" type="text" class="form-control" />
                                     }
                                     else
                                     {
@@ -240,9 +243,32 @@
                                 <label class="btn btn-primary form-control">@Model.OrderHeader.OrderStatus</label>
                             }
 
+                            @{
+                                var OrderTotalForStripe = Model.OrderHeader.OrderTotal * 100;
+                            }
+
+                            @if (Model.OrderHeader.PaymentStatus == SD.PaymentStatusDelayedPayment && Model.OrderHeader.OrderStatus == SD.StatusShipped)
+                            {
+
+                                <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+                                        data-key="@Stripe.Value.PublishableKey"
+                                        data-amount="@OrderTotalForStripe"
+                                        data-name="Bulky Book"
+                                        data-label="Place Order"
+                                        data-description="Get books for less"
+                                        data-locale="auto"
+                                        data-allow-remember-me="false" ,
+                                        data-image="https://stripe.com/img/documentation/checkout/marketplace.png"></script>
+                                <script>
+                                    document.getElementsByClassName("stripe-button-el")[0].style.display = "none";
+                                </script>
+
+                                <button type="submit" value="Place Order" class="btn btn-success form-control">Pay Now</button>
+                            }
+
                             @if (Model.OrderHeader.OrderStatus != SD.StatusRefunded &&
-                           Model.OrderHeader.OrderStatus != SD.StatusCancelled &&
-                           (User.IsInRole(SD.Role_Admin) || User.IsInRole(SD.Role_Employee)))
+                         Model.OrderHeader.OrderStatus != SD.StatusCancelled &&
+                         (User.IsInRole(SD.Role_Admin) || User.IsInRole(SD.Role_Employee)))
                             {
                                 <div class="pt-2">
                                     <a asp-action="CancelOrder" asp-route-id="@Model.OrderHeader.Id"
@@ -261,29 +287,29 @@
 </form>
 
 @section Scripts {
-<script>
-    function validateInput() {
-        var tracking = document.getElementById("trackingNumber").value;
-        var carrier = document.getElementById("carrier").value;
-        if (tracking.toString() == '') {
-            swal("Error", "Please enter tracking number", "error");
-            return false;
-        } else {
-            if (carrier.toString() == '') {
-                swal("Error", "Please enter carrier", "error");
+    <script>
+        function validateInput() {
+            var tracking = document.getElementById("trackingNumber").value;
+            var carrier = document.getElementById("carrier").value;
+            if (tracking.toString() == '') {
+                swal("Error", "Please enter tracking number", "error");
                 return false;
             } else {
-                return true;
+                if (carrier.toString() == '') {
+                    swal("Error", "Please enter carrier", "error");
+                    return false;
+                } else {
+                    return true;
+                }
             }
         }
-    }
 
-    $(document).ready(function () {
-        var shippingDate = document.getElementById("shippingDate");
-        if (shippingDate.value == "1/1/0001") shippingDate.value = "";
-        var paymentDate = document.getElementById("paymentDate");
-        if (paymentDate.value == "1/1/0001") paymentDate.value = "";
-    })
+        $(document).ready(function () {
+            var shippingDate = document.getElementById("shippingDate");
+            if (shippingDate.value == "1/1/0001") shippingDate.value = "";
+            var paymentDate = document.getElementById("paymentDate");
+            if (paymentDate.value == "1/1/0001") paymentDate.value = "";
+        })
 
-</script>
+    </script>
 } 
