--- a/BulkyBook/Areas/Admin/Views/Category/Index.cshtml
+++ b/BulkyBook/Areas/Admin/Views/Category/Index.cshtml
@@ -17,7 +17,7 @@
 <br />
 
 <div class="p-4 border rounded">
-    @if (Model.Categories.Count()>0)
+    @if (Model.Categories.Count() > 0)
     {
         <table class="table table-striped border">
             <tr class="table-secondary">
@@ -32,7 +32,7 @@
             {
                 <tr>
                     <td>
-                        @Html.DisplayFor(m=>item.Name)
+                        @Html.DisplayFor(m => item.Name)
                     </td>
                     <td>
                         <div class="text-center">
@@ -50,10 +50,11 @@
             }
         </table>
         <div page-model="@Model.PagingInfo" page-classes-enabled="true" page-class="btn btn-border"
-             page-class-normal="btn btn-lignt" page-class-selected ="btn btn-info active" 
+             page-class-normal="btn btn-lignt" page-class-selected="btn btn-info active"
              class="btn-group float-right"></div>
-             <br />
-    } else
+        <br />
+    }
+    else
     {
         <p>No categories exist.</p>
     }
@@ -71,22 +72,35 @@
             });
         }
     </script>
-} 
+}
 
 @*
+    <div class="p-4 border rounded">
+        <table id="tblData" class="table table-striped table-bordered" style="width:100%">
+            <thead class="thead-dark">
+                <tr class="table-info">
+                    <th>Name</th>
+                    <th></th>
+                </tr>
+            </thead>
+        </table>
+    </div>
+
+    @section Scripts {
+        <script src="~/js/category.js"></script>
+    }
+
 <div class="p-4 border rounded">
     <table id="tblData" class="table table-striped table-bordered" style="width:100%">
         <thead class="thead-dark">
             <tr class="table-info">
-                <th>Name</th>
+                <th></th>
                 <th></th>
             </tr>
         </thead>
     </table>
 </div>
 
-@section Scripts {
-    <script src="~/js/category.js"></script>
-}
+<script src="~/js/category.js"></script>
 *@
 
