Employee Registeration Fix

--- a/BulkyBook/Areas/Identity/Pages/Account/Register.cshtml
+++ b/BulkyBook/Areas/Identity/Pages/Account/Register.cshtml
@@ -94,7 +94,7 @@
                             <input placeholder="Name" asp-for="Input.Name" class="form-control" />
                             <span asp-validation-for="Input.Name" class="text-danger"></span>
                         </div>
-                        @if (User.IsInRole(SD.Role_Admin))
+                        @if (User.IsInRole(SD.Role_Admin) || User.IsInRole(SD.Role_Employee))
                         {
                             <div class="form-group">
                                 <label asp-for="Input.Role"></label>
